metrics/network-policy-monitoring-allow-ingress-thanos-prometheus.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: monitoring-allow-ingress-thanos-prometheus
  namespace: monitoring
spec:
  podSelector:
    matchExpressions:
      - key: app
        operator: In
        values:
          - prometheus-server
          - thanos-querier
          - thanos-store-gateway
          - thanos-compactor
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring
      ports:
        - protocol: TCP
          port: 9090
        - protocol: TCP
          port: 10901
        - protocol: TCP
          port: 10902
